REGRESSION(r102190) [chromium] text rendering (font and font size) in some Arabic/Persian page is wrong when using certain fonts https://bugs.webkit.org/show_bug.cgi?id=83523

Reviewed by Kent Tamura.

Revert r102190.
Convert characters being treatAsSpace to white space.

* platform/graphics/chromium/UniscribeHelper.cpp:
(WebCore::UniscribeHelper::fillRuns):
(WebCore::UniscribeHelper::adjustSpaceAdvances):


Canonical link: https://commits.webkit.org/101463@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114187 268f45cc-cd09-0410-ab3c-d52691b4dbfc