Source/WebCore/platform/graphics/chromium/UniscribeHelper.cpp
@@ -541,7 +541,7 @@ void UniscribeHelper::fillRuns()
                                            0, // fNeutralOverride    :1;
                                            0, // fNumericOverride    :1;
                                            0, // fLegacyBidiClass    :1;
-                                           1, // fMergeNeutralItems  :1;
+                                           0, // fMergeNeutralItems  :1;
                                            0};// fReserved           :7;
     // Calling ScriptApplyDigitSubstitution( 0, &inputControl, &inputState)
     // here would be appropriate if we wanted to set the language ID, and get
@@ -575,6 +575,24 @@ void UniscribeHelper::fillRuns()
                                             &inputControl, &inputState,
                                             &m_runs[0], &m_scriptTags[0],
                                             &numberOfItems);
+
+            if (SUCCEEDED(hr)) { 
+                // Pack consecutive runs, the script tag of which are 
+                // SCRIPT_TAG_UNKNOWN, to reduce the number of runs. 
+                for (int i = 0; i < numberOfItems; ++i) { 
+                    if (m_scriptTags[i] == SCRIPT_TAG_UNKNOWN) { 
+                        int j = 1; 
+                        while (i + j < numberOfItems && m_scriptTags[i + j] == SCRIPT_TAG_UNKNOWN) 
+                            ++j; 
+                        if (--j) { 
+                            m_runs.remove(i + 1, j); 
+                            m_scriptTags.remove(i + 1, j); 
+                            numberOfItems -= j; 
+                        } 
+                    } 
+                } 
+                m_scriptTags.resize(numberOfItems); 
+            } 
         } else {
             hr = ScriptItemize(m_input, m_inputLength,
                                static_cast<int>(m_runs.size()) - 1,
@@ -892,6 +910,8 @@ void UniscribeHelper::adjustSpaceAdvances()
             int glyphIndex = shaping.m_logs[i];
             int currentAdvance = shaping.m_advance[glyphIndex];
 
+            shaping.m_glyphs[glyphIndex] = shaping.m_spaceGlyph;
+
             if (treatAsSpace) {
                 // currentAdvance does not include additional letter-spacing,
                 // but m_spaceWidth does. Here we find out how off we are from
@@ -913,7 +933,6 @@ void UniscribeHelper::adjustSpaceAdvances()
             shaping.m_abc.abcB -= currentAdvance;
             shaping.m_offsets[glyphIndex].du = 0;
             shaping.m_offsets[glyphIndex].dv = 0;
-            shaping.m_glyphs[glyphIndex] = shaping.m_spaceGlyph;
         }
     }
 }
